2007-07-28  Brian Warner  <warner@lothar.com>

	* buildbot/changes/mail.py (SVNCommitEmailMaildirSource): add a
	parser for the "commit-email.pl" script that is shipped with SVN,
	written by Justin Mason. Thanks! Closes SF#1072845.
	* buildbot/test/mail/svn-commit.*: sample messages
	* buildbot/test/test_mailparse.py (TestSVNCommitEmail): test it
	* docs/buildbot.texinfo (SVNCommitEmailMaildirSource): docs

2007-07-27  Brian Warner  <warner@lothar.com>

	* buildbot/changes/mail.py: refactor: move parsing into a method
	named 'parse', each parser type gets a separate subclass. Remove
	the old 'sep' argument (hardcode it to '/'), fix usage of prefix=
	to be a simple leading-substring match. Add a warning to the logs
	if prefix= does not end in a slash, since that's probably a
	mistake. Fix both places where a prefix= mismatch would skip all
	subsequent files in the same email, instead of just skipping the
	one that didn't match.
	* buildbot/test/test_mailparse.py: match changes

	* docs/buildbot.texinfo (Getting Source Code Changes): refactor
	docs on email-based ChangeSources

	* docs/buildbot.texinfo (Getting Source Code Changes): move all
	the changesource types up a level, removing the one-entry menu in
	the process

	* buildbot/master.py (BuildMaster.loadConfig_Slaves): rename
	c['bots'] to c['slaves'], and use buildbot.slave.BuildSlave
	instances instead of tuples. Closes #63.
	* buildbot/slave/__init__.py (BuildSlave): define marker class
	* buildbot/scripts/sample.cfg: use c['slaves'] in sample config
	* docs/buildbot.texinfo (Buildslave Specifiers): document c['slaves']
	* buildbot/test/test_*.py: update tests to match
	* buildbot/test/test_config.py (ConfigTest.testBots): verify that
	the c['bots'] backwards-compatibility handler works

2007-07-26  Brian Warner  <warner@lothar.com>

	* buildbot/changes/hgbuildbot.py (hook): add an in-process
	Mercurial change-sending hook, contributed by Frederic Leroy.
	Thanks! Addresses #50.