@@ -1,5 +1,8 @@
 2007-07-28  Brian Warner  <warner@lothar.com>
 
+	* buildbot/test/test_mailparse.py: rename sample emails a bit
+	* buildbot/test/mail/msg*: same
+
 	* buildbot/changes/mail.py (SVNCommitEmailMaildirSource): add a
 	parser for the "commit-email.pl" script that is shipped with SVN,
 	written by Justin Mason. Thanks! Closes SF#1072845.
